# python-flask-server-generated/python-flask-server/swagger_server/swagger/swagger.yaml
@@ -6,7 +6,7 @@ info:
   title: "Swagger tutorial"
 basePath: "/service-api"
 schemes:
-- "http"
+  - "http"
 paths:
   /student:
     post:
@@ -14,18 +14,18 @@ paths:
       description: ""
       operationId: "add_student"
       consumes:
-      - "application/json"
-      - "application/xml"
+        - "application/json"
+        - "application/xml"
       produces:
-      - "application/xml"
-      - "application/json"
+        - "application/xml"
+        - "application/json"
       parameters:
-      - in: "body"
-        name: "body"
-        description: "Student object that needs to be added"
-        required: true
-        schema:
-          $ref: "#/definitions/Student"
+        - in: "body"
+          name: "body"
+          description: "Student object that needs to be added"
+          required: true
+          schema:
+            $ref: "#/definitions/Student"
       responses:
         405:
           description: "Invalid input"
@@ -36,20 +36,20 @@ paths:
       description: "Returns a single student"
       operationId: "get_student_by_id"
       produces:
-      - "application/xml"
-      - "application/json"
+        - "application/xml"
+        - "application/json"
       parameters:
-      - name: "student_id"
-        in: "path"
-        description: "ID of student to return"
-        required: true
-        type: "integer"
-        format: "int64"
-      - name: "subject"
-        in: "query"
-        description: "The subject name"
-        required: false
-        type: "string"
+        - name: "student_id"
+          in: "path"
+          description: "ID of student to return"
+          required: true
+          type: "integer"
+          format: "int64"
+        - name: "subject"
+          in: "query"
+          description: "The subject name"
+          required: false
+          type: "string"
       responses:
         200:
           description: "successful operation"
@@ -64,15 +64,15 @@ paths:
       description: ""
       operationId: "delete_student"
       produces:
-      - "application/xml"
-      - "application/json"
+        - "application/xml"
+        - "application/json"
       parameters:
-      - name: "student_id"
-        in: "path"
-        description: "ID of student to return"
-        required: true
-        type: "integer"
-        format: "int64"
+        - name: "student_id"
+          in: "path"
+          description: "ID of student to return"
+          required: true
+          type: "integer"
+          format: "int64"
       responses:
         200:
           description: "successful operation"
